Dodanie diagramów GUI całego interfejsu oraz wstępne wykonanie całego interfejsu w JavaFX.